--- a/src/views/index.html
+++ b/src/views/index.html
@@ -32,7 +32,7 @@
                 <div class="header">
                     <a href="#" class="header__logo"><img src="../img/svg/Logo.svg" alt="Logo"></a>
                     <ul class="header-list">
-                        <li class="header-list__item"><a href="#">Home</a></li>
+                        <li class="header-list__item header-list__item-active"><a href="#">Home</a></li>
                         <li class="header-list__item"><a href=" #">About</a></li>
                         <li class="header-list__item"><a href=" #">Contents</a></li>
                         <li class="header-list__item"><a href=" #">Books</a></li>
@@ -44,16 +44,18 @@
                     </ul>
                 </div>
                 <div class="block-book">
-                    <div></div>
+                    <div class="block-img">
+                        <img src="../img/book.jpg" alt="">
+                    </div>
                     <div class="block-text">
                         <p class="block-text__name">- By Emma Anderson</p>
-                        <h1 class="block-text__title">BUKEE: THE BOOK<span>A room without books is like a body without a
-                                soul</span></h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
+                        <h1 class="block-text__title">BUKEE: THE BOOK</h1>
+                        <p class="block-text__subtitle">A room without books is like a body without a soul</p>
+                        <p class="block-text__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
                             et dolore magna
                             aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                             commodo consequat.</p>
-                        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                        <p class="block-text__text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                             pariatur. Excepteur sint
                             occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed
                             ut</p>
